--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
         "akinator"
-    ]
+    ],
+    "files.associations": {
+        "iostream": "cpp",
+        "string": "cpp",
+        "format": "cpp"
+    }
 }
